created my portfolio

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ Have fun creating your portfolio on this template!!! -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Title: add your Portfolio websites's title here -->
-    <title>[Your name here] | Developer</title>
+    <title>Portfolio | Adil Ahmed Qureshi | Developer</title>
 
     <!-- Add some coding keywords below, Ex: (javascript, yourusername, etc) -->
     <meta name="keywords" content="[username], [name], skill" />
@@ -97,9 +97,9 @@ Have fun creating your portfolio on this template!!! -->
     <div id="hero">
       <section class="container">
         <h1 class="hero-title">
-          Hi, my name is <span class="text-color-main name">Your Name</span>
+          Hi, my name is <span class="text-color-main name">Adil Ahmed Qureshi</span>
           <br />
-          I'm the Unknown Developer.
+          I'm Full Stack Web Developer.
         </h1>
         <p class="hero-cta">
           <a class="cta-btn cta-btn--hero" href="#about">Get in touch</a>
@@ -119,25 +119,20 @@ Have fun creating your portfolio on this template!!! -->
           <div class="about-wrapper__image">
             <img
               class="img-fluid"
-              src="./assets/profile.png"
+              src="./assets/undefined - Imgur.jpg"
               alt="Profile Image"
             />
           </div>
           <div class="about-wrapper__info">
             <p class="about-wrapper__info-text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Temporibus quae repellat, ad omnis distinctio velit saepe expedita
-              architecto cumque veritatis adipisci. Sapiente non, saepe hic
-              adipisci doloribus quisquam recusandae et.
+              Searching for a Web Developer position with ABC Company that prioritizes graphical design and 
+              compatibility among media while encouraging creative thinking and problem-solving.
             </p>
             <p class="about-wrapper__info-text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam
-              obcaecati doloribus qui praesentium quae veniam esse mollitia
-              consequuntur nisi minima quasi et fugit quidem enim recusandae
-              delectus, iusto culpa rerum?
+              
             </p>
             <span class="about-wrapper__cta">
-              <a href="#" class="cta-btn cta-btn--resume">View Resume</a>
+              <a target="_blank" href="https://docs.google.com/document/d/19r8rrTxydptgZkGPRJEs9Rh2xEI2kDJU/edit?usp=sharing&ouid=110184514128754716117&rtpof=true&sd=true" class="cta-btn cta-btn--resume">View Resume</a>
             </span>
           </div>
         </div>
@@ -154,22 +149,22 @@ Have fun creating your portfolio on this template!!! -->
           <!-- Each .row is a project -->
           <article class="row">
             <div class="project-wrapper__text">
-              <h3 class="project-wrapper__text-title">Project Title</h3>
+              <h3 class="project-wrapper__text-title">•	E-commerce Website Best Buy.com</h3>
               <p class="project-wrapper__text-info">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Deleniti voluptas, sit nam perspiciatis tempore aspernatur ullam
-                necessitatibus impedit repellendus vero sed ipsa eos beatae ab
-                sint saepe nostrum! Enim, perferendis.
+                Best Buy is an American multinational consumer electronics retailer headquartered in Richfield, 
+                Minnesota. Originally founded by Richard M. Schulze and James Wheeler in 1966 as an audio specialty 
+                store called Sound of Music, it was rebranded under its current name with an emphasis on 
+                consumer electronics in 1983. 
               </p>
               <div class="project-wrapper__text-btns">
                 <a
-                  href="#"
+                  href="https://unit3-group-project.netlify.app/"
                   target="_blank"
                   rel="noopener noreferrer"
                   class="cta-btn cta-btn--hero cta-btn--projects"
                   >See Live</a
                 >
-                <a href="#" target="_blank" class="cta-btn text-color-main"
+                <a href="https://github.com/nvFARHAN/bestbuy.com" target="_blank" class="cta-btn text-color-main"
                   >Source Code</a
                 >
               </div>
@@ -179,7 +174,7 @@ Have fun creating your portfolio on this template!!! -->
               <a href="#" target="_blank" rel="noopener noreferrer">
                 <div class="thumbnail rounded">
                   <img
-                    src="./assets/project.png"
+                    src="./assets/project-best-buy.jpg"
                     class="img-fluid"
                     alt="Project Image"
                   />
@@ -190,7 +185,7 @@ Have fun creating your portfolio on this template!!! -->
           <!-- /END Project -->
 
           <!-- Each .row is a project -->
-          <article class="row">
+          <!-- <article class="row">
             <div class="project-wrapper__text">
               <h3 class="project-wrapper__text-title">Project Title</h3>
               <p class="project-wrapper__text-info">
@@ -228,7 +223,7 @@ Have fun creating your portfolio on this template!!! -->
           <!-- /END Project -->
 
           <!-- Each .row is a project -->
-          <article class="row">
+          <!-- <article class="row">
             <div class="project-wrapper__text">
               <h3 class="project-wrapper__text-title">Project Title</h3>
               <p class="project-wrapper__text-info">
@@ -262,8 +257,8 @@ Have fun creating your portfolio on this template!!! -->
                 </div>
               </a>
             </div>
-          </article>
-          <!-- /END Project -->
+          </article> -->
+          <!-- /END Project --> -->
         </div>
       </div>
     </section>
@@ -296,7 +291,7 @@ Have fun creating your portfolio on this template!!! -->
           >
             <i class="fa fa-twitter"></i>
           </a>
-          <a
+          <!-- <a
             href="#!"
             target="_blank"
             rel="noopener noreferrer"
@@ -311,9 +306,9 @@ Have fun creating your portfolio on this template!!! -->
             aria-label="codepen"
           >
             <i class="fa fa-codepen"></i>
-          </a>
+          </a> -->
           <a
-            href="#!"
+            href="https://www.linkedin.com/in/adil-ahmed-522a0b21a/"
             target="_blank"
             rel="noopener noreferrer"
             aria-label="linkedin"
@@ -321,7 +316,7 @@ Have fun creating your portfolio on this template!!! -->
             <i class="fa fa-linkedin"></i>
           </a>
           <a
-            href="#!"
+            href="https://github.com/AdilAhmed976"
             target="_blank"
             rel="noopener noreferrer"
             aria-label="github"
@@ -331,12 +326,12 @@ Have fun creating your portfolio on this template!!! -->
         </div>
         <hr />
         <p class="footer__text">
-          &copy; <span id="year"></span> - Template by
+          &copy; <span id="year"></span> 
           <a
             href="https://github.com/AnilSeervi"
             target="_blank"
             rel="noopener noreferrer"
-            >Anil Seervi</a
+            ></a
           >. <br />Made with &hearts;
         </p>
       </div>
